white space bug

--- a/style.css
+++ b/style.css
@@ -1439,7 +1439,8 @@ height: 100%;
     }
      .header-data_text-1{
         /* padding: 6rem 2rem; */
-        white-space: nowrap;
+        white-space: nowrap!important;
+         -webikit-white-space: nowrap;
     }
   }
   
